# Churn_ML_System

./: .gitignore  CLAUDE.md  README.md  api.py  predict.py  pyproject.toml  requirements.txt  schema.py  test_api.py  train.py
config/: settings.yaml
docs/: Shadow_logging_or_Online_data_Collection.md  api_serving_design.md  configuration_driven_system.md  configuration_management.md  data_splitting_and_temporal_leakage.md  experiment_lifecycle.md  experiment_tracking_and_metadata.md  feature_builder_introduction.md  feature_contract_and_schema_evaluation.md  feature_selection_and_leakage.MD  feature_training_serving_skew.md  inference_validation.md  logging_and_observability.md  model_contract_loader.md  model_lineage_and_traceability.md  model_versioning_and_promotion.md  multimodel_training_and_champion_selection.md  pipeline_orchestration_design.md  production_model_lifecycle.md  system_architecure.md  system_modularization.md  system_refactor_and_module_design.md  training_pipeline_refactor.md  training_serving_consistency.md
models/: model.pkl
models/experiments/churn_model_20260218_110216/: metadata.json
models/experiments/churn_model_20260220_153037/: metadata.json  model.pkl
models/experiments/churn_model_20260221_213555/: metadata.json
models/experiments/churn_model_20260222_023356/: metadata.json
models/lineage/: lineage.json
models/monitoring/: health_report.json  prediction_report.json
src/churn_system/: api.py  config.py  drift.py  logger.py  model_compare.py  model_health.py  orchestrator.py  retraining_data.py  schema.py  training.py
(+44 files in other folders)
